--- a/Source/kCura.IntegrationPoints.RelativitySync/kCura.IntegrationPoints.RelativitySync.csproj
+++ b/Source/kCura.IntegrationPoints.RelativitySync/kCura.IntegrationPoints.RelativitySync.csproj
@@ -2,6 +2,12 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>net462</TargetFramework>
+	  <GenerateAssemblyConfigurationAttribute>false</GenerateAssemblyConfigurationAttribute>
+	  <GenerateAssemblyCompanyAttribute>false</GenerateAssemblyCompanyAttribute>
+	  <GenerateAssemblyFileVersionAttribute>false</GenerateAssemblyFileVersionAttribute>
+	  <GenerateAssemblyProductAttribute>false</GenerateAssemblyProductAttribute>
+	  <GenerateAssemblyTitleAttribute>false</GenerateAssemblyTitleAttribute>
+	  <GenerateAssemblyVersionAttribute>false</GenerateAssemblyVersionAttribute>
   </PropertyGroup>
   <Import Project="..\..\.paket\Paket.Restore.targets" />
   <ItemGroup>
