--- a/Source/kCura.IntegrationPoints.Agent.Tests/kCura.IntegrationPoints.Agent.Tests.csproj
+++ b/Source/kCura.IntegrationPoints.Agent.Tests/kCura.IntegrationPoints.Agent.Tests.csproj
@@ -30,6 +30,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Moq">
+      <HintPath>..\..\packages\Moq\lib\net45\Moq.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
@@ -51,6 +54,7 @@
     </Compile>
     <Compile Include="JobExecutorTests.cs" />
     <Compile Include="Monitoring\ExternalServiceInstrumentationProviderWithJobContextTests.cs" />
+    <Compile Include="RelativitySyncConstrainsCheckerTests.cs" />
     <Compile Include="SendEmailManagerUnitTests.cs" />
     <Compile Include="TaskExceptionServiceTests.cs" />
     <Compile Include="TaskExceptionMediatorTests.cs" />
