--- a/Source/kCura.IntegrationPoints.Agent/kCura.IntegrationPoints.Agent.csproj
+++ b/Source/kCura.IntegrationPoints.Agent/kCura.IntegrationPoints.Agent.csproj
@@ -56,7 +56,9 @@
     </Compile>
     <Compile Include="Agent.cs" />
     <Compile Include="Attributes\SynchronizedTaskAttribute.cs" />
+    <Compile Include="ConfigurationDeserializer.cs" />
     <Compile Include="Exceptions\AgentDropJobException.cs" />
+    <Compile Include="IConfigurationDeserializer.cs" />
     <Compile Include="Installer\AgentAggregatedInstaller.cs" />
     <Compile Include="Installer\AgentInstaller.cs" />
     <Compile Include="Context\JobContextProvider.cs" />
@@ -68,6 +70,7 @@
     <Compile Include="Logging\JobLogInformation.cs" />
     <Compile Include="Logging\CreateErrorRdo.cs" />
     <Compile Include="Monitoring\ExternalServiceInstrumentationProviderWithJobContext.cs" />
+    <Compile Include="RelativitySyncConstrainsChecker.cs" />
     <Compile Include="Toggles\EnableSyncToggle.cs" />
     <Compile Include="TaskFactory\IJobSynchronizationChecker.cs" />
     <Compile Include="TaskFactory\ITaskFactoryJobHistoryServiceFactory.cs" />
