--- a/Source/Relativity.Sync/Relativity.Sync.csproj
+++ b/Source/Relativity.Sync/Relativity.Sync.csproj
@@ -21,9 +21,12 @@
     <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
       <_Parameter1>DynamicProxyGenAssembly2</_Parameter1>
     </AssemblyAttribute>
-    <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
-      <_Parameter1>kCura.IntegrationPoints.RelativitySync</_Parameter1>
-    </AssemblyAttribute>
+		<AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
+			<_Parameter1>kCura.IntegrationPoints.RelativitySync</_Parameter1>
+		</AssemblyAttribute>
+	  <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
+		  <_Parameter1>kCura.IntegrationPoints.RelativitySync.Tests</_Parameter1>
+	  </AssemblyAttribute>
   </ItemGroup>
   <Import Project="..\..\.paket\Paket.Restore.targets" />
 </Project>
