--- a/Source/kCura.IntegrationPoints.RelativitySync/kCura.IntegrationPoints.RelativitySync.csproj
+++ b/Source/kCura.IntegrationPoints.RelativitySync/kCura.IntegrationPoints.RelativitySync.csproj
@@ -14,6 +14,7 @@
     <Compile Include="..\..\Version\AssemblyInfo.cs" Link="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\kCura.IntegrationPoints.Core\kCura.IntegrationPoints.Core.csproj" />
     <ProjectReference Include="..\kCura.ScheduleQueue.Core\kCura.ScheduleQueue.Core.csproj" />
   </ItemGroup>
   <ItemGroup>
